commit 230118 resize on mobile devices fixed

--- a/sass/1st-screen/1st-screen.scss
+++ b/sass/1st-screen/1st-screen.scss
@@ -121,33 +121,3 @@
 .headline--firstscreen {
     padding-right: 350px;
 }
-
-
-@media screen and (max-width:520px) {
-
-    .first-screen {
-        background-color: $light-grey;
-        background: url('../images/images/1st-screen.jpg') center no-repeat;
-        background-size: cover;
-        width: 100%;
-        height: 100vh;
-    }
-
-    .container--first-screen {
-        padding: 0 10px;
-        box-sizing:border-box;
-    }
-
-    .slider-body {
-        margin: 0 auto;
-        padding-top: 120px;
-        width: calc(100% - 96px);
-        color: #333;
-        background: none;
-    }
-
-    .headline--firstscreen {
-        padding: 0;
-    }
-
-}
