--- a/sass/basic/basic.scss
+++ b/sass/basic/basic.scss
@@ -1,5 +1,7 @@
 body {
     background: white;
+    min-width: 1074px;
+    width: 100%;
 }
 
 *{
